--- a/TestForGit/TestForGit.csproj
+++ b/TestForGit/TestForGit.csproj
@@ -94,6 +94,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Content Include="Home.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
